--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
     font-family: "Open Sans", Arial, Helvetica, sans-serif;
     background: #F6F6F6;
@@ -6,15 +10,6 @@ body {
 
 .text-align-center {
     text-align: center;
-}
-
-.title {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 25px;
-    line-height: 39px;
-    text-align: center;
-    color: #1620A5;
 }
 
 #rasp {
@@ -31,12 +26,6 @@ body {
     max-width: 850px;
     margin: 0 auto;
     width: 100%;
-}
-
-.info-section {
-    margin: 0 auto;
-    width: 100%;
-    opacity: .5;
 }
 
 .tabs {
@@ -92,18 +81,18 @@ body {
     align-items: stretch;
     width: 100%;
 }
-select {
+.select-s {
     border: none;
     background-color: #F5F9FF;
-    padding: 13px 16px;
+    /* padding: 13px 16px; */
     font-size: 14px;
     font-family: inherit;
     border-radius: 3px;
     outline: none;
-    width: calc(100% / 3);
+    /* width: calc(100% / 3); */
     -webkit-appearance: none;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    margin-right: 10px;
+    /* margin-right: 10px; */
 }
 
 input[type="date"] {
@@ -114,29 +103,9 @@ input[type="date"] {
     font-family: inherit;
     border-radius: 3px;
     outline: none;
-    width: calc(100% / 3);
+    /* width: calc(100% / 3); */
     border: 1px solid rgba(0, 0, 0, 0.1);
-    margin-right: 10px;
-}
-
-button {
-    border: 1px solid #1620A5;
-    box-sizing: border-box;
-    border-radius: 3px;
-    font-style: normal;
-    font-weight: normal;
-
-    line-height: 19px;
-    text-align: center;
-
-    color: #ffffff;
-    text-decoration: none;
-    background: #1620A5;
-    display: inline-flex;
-    padding: 13px 16px;
-    width: calc(100%/3);
-    justify-content: center;
-    align-items: center;
+    /* margin-right: 10px; */
 }
 
 .line-groups {
@@ -196,7 +165,7 @@ button {
     overflow-x: auto;
 }
 
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 640px) {
     .tabs {
         flex-wrap: wrap;
     }    
@@ -214,6 +183,6 @@ button {
     .row-select form>select, .row-select form>input, .row-select form> button {
         width: 100%;
         margin-right: 0;
-        margin-bottom: 5px;
+        margin-bottom: 0.375rem;
     }
 }
