--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
+
+@layer components {
+  .input-scheme-dark {
+    color-scheme: dark;
+  }
+}
+
 @tailwind utilities;
