--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,18 @@
   .input-scheme-dark {
     color-scheme: dark;
   }
+
+  div[role=alert] {
+    @apply p-4 mb-2 text-base rounded-lg
+  }
+
+  .info-alert {
+    @apply text-blue-700 bg-blue-100 dark:bg-blue-200 dark:text-blue-800
+  }
+
+  .success-alert {
+    @apply text-green-700 bg-green-100 dark:bg-green-200 dark:text-green-800
+  }
 }
 
 @tailwind utilities;
